--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "trollsift" %}
 {% set version = "0.3.4" %}
-{% set sha256 = "61b195b886c0e03037680840710add2e816705e1d2641e9524062d5b39436fb7" %}
 
 package:
   name: '{{ name|lower }}'
@@ -8,10 +7,10 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  sha256: 61b195b886c0e03037680840710add2e816705e1d2641e9524062d5b39436fb7
 
 build:
-  number: 0
+  number: 1
   noarch: python
   script: {{ PYTHON }} -m pip install . --no-deps -vv
 
