--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,7 +29,7 @@ test:
 
 about:
   home: https://github.com/pytroll/trollsift
-  license: GPL-3.0
+  license: GPL-3.0-or-later
   license_family: GPL3
   license_file: LICENSE.txt
   summary: String parser/formatter for PyTroll packages
