--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,8 @@ requirements:
   host:
     - python 3.6
     - pip
-    - setuptools
+    - hatchling
+    - hatch-vcs
   run:
     - python >=3.6
     - six
